# sdl-surface-tension-simulator

./: .gitignore  .gitlab-ci.yml  README.md  orchestrator.py  requirements.txt  test_orchestrator.py
AnalyserService/: pendant_drop_analyser_controller.sila.xml  pyproject.toml
AnalyserService/AnalyserService/: server.py
AnalyserService/AnalyserService/feature_implementations/: pendantdropanalysercontroller_impl.py
AnalyserService/tests/: PendantDropAnalyser_test.py  testPendantDropAnalyser.py
CameraAdaptor/: camera_controller.sila.xml  pyproject.toml
CameraAdaptor/CameraAdaptor/: server.py
CameraAdaptor/CameraAdaptor/feature_implementations/: cameracontroller_impl.py
DataService/: data_item_provider.sila.xml  pyproject.toml
DataService/DataService/: server.py
DataService/DataService/feature_implementations/: dataitemprovider_impl.py
OpentronsAdaptor/: opentrons_OT-2_controller.xml  pyproject.toml
OpentronsAdaptor/OpentronsOT2Adaptor/: server.py
OpentronsAdaptor/OpentronsOT2Adaptor/feature_implementations/: opentronsot2controller_impl.py
PlannerService/: binary_search_controller.sila.xml  experiment_plan_provider.sila.xml  pyproject.toml
PlannerService/PlannerService/: server.py
PlannerService/PlannerService/feature_implementations/: binarysearchcontroller_impl.py  experimentplanprovider_impl.py
