[project]
name = "AnalyserService"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["AnalyserService*"]

[tool.setuptools.package-data]
"AnalyserService.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
