[project]
name = "CameraAdaptor"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["CameraAdaptor*"]

[tool.setuptools.package-data]
"CameraAdaptor.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
