[project]
name = "DataService"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["DataService*"]

[tool.setuptools.package-data]
"DataService.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
