[project]
name = "PlannerService"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "sila2",
    "typer",
]

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["PlannerService*"]

[tool.setuptools.package-data]
"PlannerService.generated" = [
    "*/*.sila.xml",
    "*/*.proto",
]
